--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
       "/node_modules/",
       "/dist/",
       "/examples/",
-      "/es/"
+      "/es/",
+      "/integration/"
     ],
     "coveragePathIgnorePatterns": [
       "<rootDir>/tests"
@@ -117,6 +118,7 @@
     "prettier": "^1.8.2",
     "prismjs": "^1.8.4",
     "prop-types": "^15.6.0",
+    "puppeteer": "^0.13.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-modal": "^3.1.5",
@@ -146,11 +148,12 @@
     "lint": "npm run linter:js -s -- . && npm run linter:css -s -- '**/*.scss' && npm run linter:md -s -- '**/*.md'",
     "format": "npm run formatter -s -- '**/*.scss' '**/*.md' lib/**/*.js examples/**/*.js webpack/*.js",
     "test": "jest",
+    "test:integration": "jest --config tests/integration/jest.config.js",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "test:watch:coverage": "jest --watch --coverage",
     "report:coverage": "open coverage/lcov-report/index.html",
     "report:build": "open webpack/webpack-stats.html",
-    "test:ci": "npm run lint -s && npm run test:coverage -s && npm run dist -s"
+    "test:ci": "npm run lint -s && npm run test:coverage -s && npm run dist -s && npm run test:integration -s"
   }
 }
