--- a/package.json
+++ b/package.json
@@ -108,10 +108,13 @@
     "enzyme-to-json": "^3.2.2",
     "eslint": "^3.19.0",
     "eslint-plugin-springload": "^2.2.0",
+    "express": "^4.15.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "immutable": "~3.7.4",
     "jest": "^22.0.0",
+    "jest-environment-node": "^22.0.1",
+    "mkdirp": "^0.5.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "postcss-loader": "^2.0.6",
@@ -123,6 +126,7 @@
     "react-dom": "^16.1.1",
     "react-modal": "^3.1.5",
     "react-test-renderer": "^16.1.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
